<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/about_browser_activity"
    android:layout_gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Course_Instructor"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"
                />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/hasnat"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev_Name"
                android:textSize="20dp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Student of BU (CSE 42)"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="\nApp Feature For Learner"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_feature"
                android:textSize="17dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="17dp"
                android:text="@string/last_talk"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>